--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.5/redux.min.js"></script>
+    <!-- <script -->
+    <!--     src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.production.min.js"></script> -->
     <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.production.min.js"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.production.min.js"
+        integrity="sha256-32Gmw5rBDXyMjg/73FgpukoTZdMrxuYW7tj8adbN8z4="
+        crossorigin="anonymous"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.production.min.js"></script>
     <script
@@ -15,7 +19,7 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/redux-saga/1.1.3/redux-saga.umd.min.js"></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/@material-ui/core@4.9.5/index.min.js"></script>
+        src="https://unpkg.com/@material-ui/core@latest/umd/material-ui.production.min.js"></script>
     <title>ShoboChat&Chi;</title>
   </head>
   <body>
